--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 HI this is test. This is second test 
-this is a text by Colette
+this is an automated text by Colette.
 </body>
 </html>
